<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="response_neutral">OK</string>
    <string name="response_positive">Yes</string>
    <string name="response_negative">No</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_survey">Surveys</string>
    <string name="title_activity_login">Sign in</string>
    <string name="questions">Take me to the questions!</string>
    <string name="reports">Take me to the reports!</string>
    <string name="district">District</string>
    <string name="block">Block</string>
    <string name="cluster">Cluster</string>
    <string name="school">School</string>
    <string name="prompt_district">Select District</string>
    <string name="prompt_block">Select Block</string>
    <string name="prompt_cluster">Select Cluster</string>
    <string name="prompt_school">Select School</string>
    <string name="prompt_user_type">Select Respondent Type</string>
    <string name="prompt_register">Not a user yet?</string>
    <string name="prompt_login">Already a user?</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="changePassword">Change password</string>
    <string name="forgotPassword">Forgot password?</string>
    <string name="confirmPassword">CONFIRM PASSWORD</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">LOGIN</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Location permissions are needed</string>
    <string name="title_activity_question">Questions</string>
    <string name="Submit">Submit</string>
    <string name="Cancel">Cancel</string>
    <string name="Ok">OK</string>
    <string name="Ok_">OK</string>
    <string name="title_activity_user_registration">UserRegistrationActivity</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="prompt_enter_email">E-MAIL/MOBILE NUMBER</string>
    <string name="prompt_enter_email1">E-MAIL</string>
    <string name="prompt_enter_email1_">E-MAIL (OPTIONAL)</string>
    <string name="prompt_enter_password">PASSWORD</string>
    <string name="prompt_verify_password">RE-ENTER PASSWORD</string>
    <string name="first_name"> FIRST NAME</string>
    <string name="last_name">LAST NAME</string>
    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="action_register">REGISTER</string>
    <string name="title_activity_boundary_selection">Choose your Boundary</string>
    <string name="new_response">New Survey+</string>
    <string name="generate_report">Create Survey Report</string>
    <string name="list_stories">All Stories</string>
    <string name="meta_medium">Total Answers: %1$s</string>
    <string name="meta_small">%1$s  %2$s</string>
    <string name="meta_total">Total Stories: %1$d</string>
    <string name="meta_total_">Total Stories:0</string>
    <string name="meta_daterange">From %1$s to %2$s</string>
    <string name="meta_total_by_user">Total Stories By You: %1$d</string>
    <string name="meta_total_by_user_">Total Stories By You:0</string>
    <string name="meta_total_by_user_nsy">Your Stories Not Synced: %1$d</string>
    <string name="meta_total_by_user_nsy_">Your Stories Not Synced:0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="backtologin">BACK TO <u>LOGIN</u></string>
    <string name="prompt_start_date">Start Date</string>
    <string name="prompt_end_date">End Date</string>
    <string name="answer_yes">Yes</string>
    <string name="answer_no">No</string>
    <string name="answer_unknown">Don\'t Know</string>
    <string name="prompt_new_rsponse">Do you want to record another response?</string>
    <string name="survey_empty_response_title">No Question Answered!</string>
    <string name="survey_empty_response_body">* You must answer all questions to submit a story.</string>
    <string name="enter_valid_email_or_Phone">Please enter valid mobile number</string>
    <string name="enter_valid_email">Please enter valid email id</string>
    <string name="enter_ten_digit_number">Please enter a valid 10 digit mobile number</string>
    <string name="selectState">Please select your survey state</string>
    <string name="selectLanguage">Please select application language</string>
    <string name="english">English</string>
    <string name="noInternetCon">No Internet Connection</string>
    <string name="emailorPasswordWrong">Email or password wrong</string>
    <string name="pleaseEnterValidEmailorPhone">Please enter valid email or mobile number</string>
    <string name="authenticating">Authenticating...</string>
    <string name="resetPassword">Reset Password</string>
    <string name="numberOfSchools">Number of schools</string>
    <string name="numberOfSchoolsWithRespo">Number of schools with surveys</string>
    <string name="numberOfRespo">Total number of surveys</string>
    <string name="updateSurveys">Update Surveys</string>
    <string name="community">Community</string>
    <string name="sync">Sync</string>
    <string name="uploadingStories">Uploading Stories</string>
    <string name="downloadingSurvey"> Downloading survey </string>
    <string name="downloadingQuestion"> Downloading question </string>
    <string name="downloadingQuestionGroup"> Downloading question group </string>
    <string name="survey"> Survey </string>
    <string name="updateSurvey">Update Survey</string>
    <string name="settings">Select language</string>
    <string name="surveySync">Survey Sync</string>
    <string name="next">Next</string>
    <string name="surveyType">Survey Type</string>
    <string name="dataAlreadynSync">Data already auto-synced</string>
    <string name="summary">User Summary</string>
    <string name="download_survey">Download survey questions</string>
    <string name="syncSurvey">Sync survey</string>
    <string name="communitySurvey">Community\nSurvey</string>
    <string name="gkaMonitoring">Ganitha Kalika\nAndolana</string>
    <string name="communitySurvey1">Community Survey</string>
    <string name="gkaMonitoring1">Ganitha Kalika Andolana</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>
    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="responseSaved">Survey saved successfully</string>
    <string name="selectSummaryLevel">Select Summary Level</string>
    <string name="selectReportLevel">Select Report Level</string>
    <string name="new_Password">NEW PASSWORD</string>
    <string name="loadSurveyImage"><u>Load Survey Image</u></string>
    <string name="loadSurveyImage_">Load Survey Image</string>
    <string name="dob">DOB (DD-MM-YYYY)</string>
    <string name="schools">SCHOOLS</string>
    <string name="pleaseSelectrespondanttype">SELECT RESPONDENT TYPE</string>
    <string name="doesnotmatcherwithpass">This field is required and must match the value entered in the password field</string>
    <string name="signupsuccess">You have been successfully signed up. Please Login.</string>
    <string name="signupfail">Failed</string>
    <string name="pleaseSelectsurveyLanguage">Please select your state and language</string>
    <string name="functioalityprogree">Functionality under progress..</string>
    <string name="loading">Loading...</string>
    <string name="dataAlreadynSyn">Data Already Auto-Synced</string>
    <string name="doyouwant">"Do you want to download reports?</string>
    <string name="nooserveyimage">No survey images found</string>
    <string name="failed">Failed</string>
    <string name="syncTitle">Sync</string>
    <string name="downloadingsurveypleasewait">Downloading stories. Please wait.</string>
    <string name="syncing">Syncing..</string>
    <string name="uploaded">Uploaded</string>
    <string name="stories">stories..</string>
    <string name="uploadingstroespleasewait">Uploading stories. Please wait</string>
    <string name="uploading"> Uploading </string>
    <string name="uploadingstorw">Data loading..</string>
    <string name="upload">upload</string>
    <string name="downloading"> Downloading </string>
    <string name="datasync">Data Sync..</string>
    <string name="syncneeded">Sync Needed</string>
    <string name="oksyncnow">Ok, Sync Now</string>
    <string name="youshouldsync">You should \"Sync\" data to get updates from ILP Konnect.</string>
    <string name="surveysyncsucc">Survey synced success:</string>
    <string name="surveysyncfail">Survey synced failed:</string>
    <string name="question"> question </string>
    <string name="questiongroup"> question group </string>
    <string name="resettingpassword">Resetting your password...</string>
    <string name="overallreport">Summary report</string>
    <string name="pleaseataachsurveyimage">Take picture of the classroom while the teacher is teaching or students are doing group learning</string>
    <string name="takephoto">Take Photo</string>
    <string name="choosefromlib">Choose from gallery</string>
    <string name="cancel">Cancel</string>
    <string name="permission">Permission necessary</string>
    <string name="externalstorage">External storage permission is necessary</string>
    <string name="pleaseuploadimage">* Please upload image</string>
    <string name="pleaseSelectAppropriateImage">Please select appropriate image</string>
    <string name="parents">Parents</string>
    <string name="teachers">Teachers</string>
    <string name="educationVol">Education Volunteers</string>
    <string name="cbomember">CBO Member</string>
    <string name="headermaster">Headmaster</string>
    <string name="sdmcmember">SDMC Member</string>
    <string name="localleaders">Local Leaders</string>
    <string name="aksharastaff">Akshara Staff</string>
    <string name="educatedyouth">Educated Youth</string>
    <string name="govtofficial">Govt Official</string>
    <string name="educationofficial">CRP</string>
    <string name="electedRepre">Elected Representative</string>
    <string name="distancemsg"><![CDATA[This survey seems to be not taken within school premises Distance between school location & your location :]]></string>
    <string name="distance">Distance</string>
    <string name="meters">Meters</string>
    <string name="km">km</string>
    <string name="bydate">By Date</string>
    <string name="all">All</string>
    <string name="searchSurveyimage">Search survey images by?</string>
    <string name="netWorkError">Network error..Please check internet and try again</string>
    <string name="nextbutton">Next</string>
    <string name="updateProfile">Update profile</string>
    <string name="setup">Download districts-block</string>
    <string name="name_of_survey">Name of the survey : </string>
    <string name="total_number_of_survey_synced">Total number of survey synced : </string>
    <string name="total_number_of_school_surveyd">Total no of school surveyed : </string>
    <string name="total_number_of_survey_pending">Total no of surveys pending for sync : </string>
    <string name="FAQ">FAQ</string>
</resources>