<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="in.org.klp.ilpkonnect.utils.AppSettings">

    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_Setup"
        android:orderInCategory="100"
        android:title="@string/setup"
        app:showAsAction="never" />




    <item
        android:id="@+id/action_updateProfile"
        android:orderInCategory="100"
        android:title="@string/updateProfile"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionFAQ"
        android:orderInCategory="100"
        android:title="@string/FAQ"
        app:showAsAction="always" />
</menu>
