<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/registration_form"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:minHeight="100dp"
                android:src="@mipmap/ilp_logo" />

            <EditText
                android:id="@+id/user_phone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:digits="0123456789"
                android:hint="@string/mobile_number"
                android:inputType="phone"

                android:singleLine="true" />


            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/prompt_enter_password"
                android:inputType="textPassword"

                android:singleLine="true" />


            <EditText
                android:id="@+id/verify_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/confirmPassword"
                android:inputType="textPassword"

                android:singleLine="true" />

            <EditText
                android:id="@+id/user_first_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/first_name"
                android:inputType="textPersonName"

                android:singleLine="true" />

            <EditText
                android:id="@+id/user_last_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/last_name"
                android:inputType="textPersonName"

                android:singleLine="true" />

            <EditText
                android:id="@+id/edtDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusableInTouchMode="false"
                android:hint="@string/dob"
                android:inputType="none" />


            <EditText
                android:id="@+id/user_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/prompt_enter_email1_"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <Spinner
                android:id="@+id/spnRespondantType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </Spinner>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0.5pt"
                android:background="#55000000"
                android:paddingLeft="5dp"


                android:paddingRight="5dp"></LinearLayout>
            <!-- Login Button -->

            <Button
                android:id="@+id/register_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dip"
                android:background="@drawable/buttonripple"
                android:text="@string/register"
                android:textColor="#ffffff" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/backtologin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:text="@string/login"
                android:textAllCaps="false"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>