<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="12sp"
                android:text="@string/numberOfSchools"/>
            <TextView style="@style/value_text.."
                android:id="@+id/school_count"/>
            <TextView  android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="12sp"
                android:text="@string/numberOfSchoolsWithRespo"/>
            <TextView style="@style/value_text.."
                android:id="@+id/school_resp_count"/>



            <TextView  android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textColor="#000000"
                android:textSize="12sp"
                android:text="@string/numberOfRespo"/>

            <TextView style="@style/value_text.."
                android:id="@+id/resp_count"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/left_arrow"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@mipmap/back"
                    android:layout_gravity="left"
                    android:clickable="true"
                    />
                <TextView style="@style/value_text.."
                    android:id="@+id/question_name"
                    android:layout_weight="1"
                    android:paddingTop="30dp"

                    android:paddingBottom="20dp"
                    android:gravity="center"/>
                <ImageView
                    android:id="@+id/right_arrow"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:clickable="true"

                    android:layout_gravity="right"
                    android:src="@mipmap/front"/>
            </LinearLayout>
            <TextView style="@style/value_text.."
                android:id="@+id/question_name1"
                android:paddingTop="30dp"
                android:visibility="gone"
                android:paddingBottom="20dp"/>
            <TableLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView style="@style/value_text.."
                        android:text="@string/answer_yes"
                        android:textAlignment="center"
                        android:layout_weight="1"/>
                    <TextView style="@style/value_text.."
                        android:text="@string/answer_no"
                        android:textAlignment="center"
                        android:layout_weight="1"/>
                    <TextView style="@style/value_text.."
                        android:text="@string/answer_unknown"
                        android:textAlignment="center"
                        android:layout_weight="1"/>
                </TableRow>
                <TableRow>
                    <TextView style="@style/value_text.."
                        android:id="@+id/txtyes"
                        android:textColor="#43AD2C"
                        android:layout_weight="1"
                        android:textStyle="bold" />
                    <TextView style="@style/value_text.."
                        android:id="@+id/txtno"
                        android:textColor="#CD4306"
                        android:layout_weight="1"
                        android:textStyle="bold" />
                    <TextView style="@style/value_text.."
                        android:id="@+id/txtdn"
                        android:textColor="#666"
                        android:layout_weight="1"
                        android:textStyle="bold" />
                </TableRow>
                <TableRow>
                    <TextView style="@style/value_text.."
                        android:id="@+id/txtyesperc"
                        android:textAlignment="center"
                        android:layout_weight="1"/>
                    <TextView style="@style/value_text.."
                        android:id="@+id/txtnoperc"
                        android:textAlignment="center"
                        android:layout_weight="1"/>
                    <TextView style="@style/value_text.."
                        android:id="@+id/txtdnperc"
                        android:textAlignment="center"
                        android:layout_weight="1"/>
                </TableRow>
            </TableLayout>
            <!--
            <TextView
                android:paddingTop="30dp"
                android:id="@+id/aggregate"
                style="@style/label_text_normal"
                android:textSize="25dp"/>
            <TextView style="@style/style_for_v alue"
                android:id="@+id/desc"/> -->
        </LinearLayout>

    </ScrollView>

    <TextView
        style="@style/label_text"
        android:paddingTop="100dp"
        android:id="@+id/block_aggregate"
        android:visibility="gone"/>

    <TextView style="@style/label_text"
        android:paddingTop="20dp"
        android:id="@+id/district_aggregate"
        android:textAlignment="center"
        android:visibility="gone"/>

</FrameLayout>
